[gd_scene load_steps=14 format=2]

[ext_resource path="res://models/Material.material" type="Material" id=1]
[ext_resource path="res://Elevator.gd" type="Script" id=2]
[ext_resource path="res://audio/sfx/button_down.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sfx/button_up.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sfx/elevator_down.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sfx/elevator_up.wav" type="AudioStream" id=6]

[sub_resource type="ArrayMesh" id=1]
resource_name = "elevator_Cube"
surfaces/0 = {
"aabb": AABB( -1, 0, -5.0041, 4.00334, 0.299039, 12.0041 ),
"array_data": PoolByteArray( 164, 180, 24, 64, 93, 26, 153, 62, 209, 110, 221, 64, 0, 127, 127, 63, 0, 44, 0, 0, 164, 180, 24, 64, 93, 26, 153, 62, 209, 110, 221, 64, 29, 0, 127, 78, 0, 44, 0, 0, 164, 180, 24, 64, 93, 26, 153, 62, 209, 110, 221, 64, 44, 0, 127, 85, 0, 44, 0, 0, 152, 87, 59, 64, 93, 26, 153, 62, 87, 29, 204, 64, 0, 127, 127, 63, 0, 50, 0, 0, 152, 87, 59, 64, 93, 26, 153, 62, 87, 29, 204, 64, 82, 0, 127, 104, 0, 50, 0, 0, 152, 87, 59, 64, 93, 26, 153, 62, 87, 29, 204, 64, 97, 0, 127, 112, 0, 50, 0, 0, 152, 87, 59, 64, 0, 0, 0, 0, 87, 29, 204, 64, 0, 129, 127, 63, 0, 50, 0, 56, 152, 87, 59, 64, 0, 0, 0, 0, 87, 29, 204, 64, 82, 0, 127, 104, 0, 50, 0, 56, 152, 87, 59, 64, 0, 0, 0, 0, 87, 29, 204, 64, 97, 0, 127, 112, 0, 50, 0, 56, 240, 251, 62, 64, 93, 26, 153, 62, 147, 28, 198, 64, 0, 127, 127, 63, 0, 51, 0, 0, 240, 251, 62, 64, 93, 26, 153, 62, 147, 28, 198, 64, 97, 0, 127, 112, 0, 51, 0, 0, 240, 251, 62, 64, 93, 26, 153, 62, 147, 28, 198, 64, 115, 0, 127, 121, 0, 51, 0, 0, 240, 251, 62, 64, 0, 0, 0, 0, 147, 28, 198, 64, 0, 129, 127, 63, 0, 51, 0, 56, 240, 251, 62, 64, 0, 0, 0, 0, 147, 28, 198, 64, 97, 0, 127, 112, 0, 51, 0, 56, 240, 251, 62, 64, 0, 0, 0, 0, 147, 28, 198, 64, 115, 0, 127, 121, 0, 51, 0, 56, 164, 180, 24, 64, 0, 0, 0, 0, 209, 110, 221, 64, 0, 129, 127, 63, 0, 44, 0, 56, 164, 180, 24, 64, 0, 0, 0, 0, 209, 110, 221, 64, 29, 0, 127, 78, 0, 44, 0, 56, 164, 180, 24, 64, 0, 0, 0, 0, 209, 110, 221, 64, 44, 0, 127, 85, 0, 44, 0, 56, 56, 197, 35, 64, 93, 26, 153, 62, 203, 121, 218, 64, 0, 127, 127, 63, 0, 46, 0, 0, 56, 197, 35, 64, 93, 26, 153, 62, 203, 121, 218, 64, 44, 0, 127, 85, 0, 46, 0, 0, 56, 197, 35, 64, 93, 26, 153, 62, 203, 121, 218, 64, 57, 0, 127, 92, 0, 46, 0, 0, 56, 197, 35, 64, 0, 0, 0, 0, 203, 121, 218, 64, 0, 129, 127, 63, 0, 46, 0, 56, 56, 197, 35, 64, 0, 0, 0, 0, 203, 121, 218, 64, 44, 0, 127, 85, 0, 46, 0, 56, 56, 197, 35, 64, 0, 0, 0, 0, 203, 121, 218, 64, 57, 0, 127, 92, 0, 46, 0, 56, 254, 119, 45, 64, 93, 26, 153, 62, 3, 127, 214, 64, 0, 127, 127, 63, 0, 48, 0, 0, 254, 119, 45, 64, 93, 26, 153, 62, 3, 127, 214, 64, 57, 0, 127, 92, 0, 48, 0, 0, 254, 119, 45, 64, 93, 26, 153, 62, 3, 127, 214, 64, 69, 0, 127, 98, 0, 48, 0, 0, 46, 189, 187, 179, 0, 0, 0, 0, 0, 0, 224, 64, 245, 0, 115, 63, 0, 56, 0, 56, 46, 189, 187, 179, 0, 0, 0, 0, 0, 0, 224, 64, 0, 129, 127, 63, 0, 56, 0, 56, 46, 189, 187, 179, 0, 0, 0, 0, 0, 0, 224, 64, 0, 0, 130, 193, 0, 56, 0, 56, 46, 189, 187, 179, 93, 26, 153, 62, 0, 0, 224, 64, 245, 0, 115, 63, 0, 56, 0, 0, 46, 189, 187, 179, 93, 26, 153, 62, 0, 0, 224, 64, 0, 127, 127, 63, 0, 56, 0, 0, 46, 189, 187, 179, 93, 26, 153, 62, 0, 0, 224, 64, 0, 0, 130, 193, 0, 56, 0, 0, 189, 197, 71, 190, 0, 0, 0, 0, 152, 98, 223, 64, 227, 0, 97, 63, 128, 55, 0, 56, 189, 197, 71, 190, 0, 0, 0, 0, 152, 98, 223, 64, 245, 0, 115, 63, 128, 55, 0, 56, 189, 197, 71, 190, 0, 0, 0, 0, 152, 98, 223, 64, 0, 129, 127, 63, 128, 55, 0, 56, 189, 197, 71, 190, 93, 26, 153, 62, 152, 98, 223, 64, 227, 0, 97, 63, 128, 55, 0, 0, 189, 197, 71, 190, 93, 26, 153, 62, 152, 98, 223, 64, 245, 0, 115, 63, 128, 55, 0, 0, 189, 197, 71, 190, 93, 26, 153, 62, 152, 98, 223, 64, 0, 127, 127, 63, 128, 55, 0, 0, 21, 239, 195, 190, 0, 0, 0, 0, 108, 144, 221, 64, 212, 0, 82, 63, 0, 55, 0, 56, 21, 239, 195, 190, 0, 0, 0, 0, 108, 144, 221, 64, 227, 0, 97, 63, 0, 55, 0, 56, 21, 239, 195, 190, 0, 0, 0, 0, 108, 144, 221, 64, 0, 129, 127, 63, 0, 55, 0, 56, 21, 239, 195, 190, 93, 26, 153, 62, 108, 144, 221, 64, 212, 0, 82, 63, 0, 55, 0, 0, 21, 239, 195, 190, 93, 26, 153, 62, 108, 144, 221, 64, 227, 0, 97, 63, 0, 55, 0, 0, 21, 239, 195, 190, 93, 26, 153, 62, 108, 144, 221, 64, 0, 127, 127, 63, 0, 55, 0, 0, 219, 57, 14, 191, 0, 0, 0, 0, 102, 155, 218, 64, 199, 0, 69, 63, 128, 54, 0, 56, 219, 57, 14, 191, 0, 0, 0, 0, 102, 155, 218, 64, 212, 0, 82, 63, 128, 54, 0, 56, 219, 57, 14, 191, 0, 0, 0, 0, 102, 155, 218, 64, 0, 129, 127, 63, 128, 54, 0, 56, 219, 57, 14, 191, 93, 26, 153, 62, 102, 155, 218, 64, 199, 0, 69, 63, 128, 54, 0, 0, 219, 57, 14, 191, 93, 26, 153, 62, 102, 155, 218, 64, 212, 0, 82, 63, 128, 54, 0, 0, 219, 57, 14, 191, 93, 26, 153, 62, 102, 155, 218, 64, 0, 127, 127, 63, 128, 54, 0, 0, 242, 4, 53, 191, 0, 0, 0, 0, 158, 160, 214, 64, 187, 0, 57, 63, 0, 54, 0, 56, 242, 4, 53, 191, 0, 0, 0, 0, 158, 160, 214, 64, 199, 0, 69, 63, 0, 54, 0, 56, 242, 4, 53, 191, 0, 0, 0, 0, 158, 160, 214, 64, 0, 129, 127, 63, 0, 54, 0, 56, 242, 4, 53, 191, 93, 26, 153, 62, 158, 160, 214, 64, 187, 0, 57, 63, 0, 54, 0, 0, 242, 4, 53, 191, 93, 26, 153, 62, 158, 160, 214, 64, 199, 0, 69, 63, 0, 54, 0, 0, 242, 4, 53, 191, 93, 26, 153, 62, 158, 160, 214, 64, 0, 127, 127, 63, 0, 54, 0, 0, 47, 219, 84, 191, 0, 0, 0, 0, 60, 199, 209, 64, 174, 0, 44, 63, 128, 53, 0, 56, 47, 219, 84, 191, 0, 0, 0, 0, 60, 199, 209, 64, 187, 0, 57, 63, 128, 53, 0, 56, 47, 219, 84, 191, 0, 0, 0, 0, 60, 199, 209, 64, 0, 129, 127, 63, 128, 53, 0, 56, 47, 219, 84, 191, 93, 26, 153, 62, 60, 199, 209, 64, 174, 0, 44, 63, 128, 53, 0, 0, 47, 219, 84, 191, 93, 26, 153, 62, 60, 199, 209, 64, 187, 0, 57, 63, 128, 53, 0, 0, 47, 219, 84, 191, 93, 26, 153, 62, 60, 199, 209, 64, 0, 127, 127, 63, 128, 53, 0, 0, 94, 131, 108, 191, 0, 0, 0, 0, 242, 62, 204, 64, 159, 0, 29, 63, 0, 53, 0, 56, 94, 131, 108, 191, 0, 0, 0, 0, 242, 62, 204, 64, 174, 0, 44, 63, 0, 53, 0, 56, 94, 131, 108, 191, 0, 0, 0, 0, 242, 62, 204, 64, 0, 129, 127, 63, 0, 53, 0, 56, 94, 131, 108, 191, 93, 26, 153, 62, 242, 62, 204, 64, 159, 0, 29, 63, 0, 53, 0, 0, 94, 131, 108, 191, 93, 26, 153, 62, 242, 62, 204, 64, 174, 0, 44, 63, 0, 53, 0, 0, 94, 131, 108, 191, 93, 26, 153, 62, 242, 62, 204, 64, 0, 127, 127, 63, 0, 53, 0, 0, 190, 20, 123, 191, 0, 0, 0, 0, 46, 62, 198, 64, 141, 0, 11, 63, 128, 52, 0, 56, 190, 20, 123, 191, 0, 0, 0, 0, 46, 62, 198, 64, 159, 0, 29, 63, 128, 52, 0, 56, 190, 20, 123, 191, 0, 0, 0, 0, 46, 62, 198, 64, 0, 129, 127, 63, 128, 52, 0, 56, 190, 20, 123, 191, 93, 26, 153, 62, 46, 62, 198, 64, 141, 0, 11, 63, 128, 52, 0, 0, 190, 20, 123, 191, 93, 26, 153, 62, 46, 62, 198, 64, 159, 0, 29, 63, 128, 52, 0, 0, 190, 20, 123, 191, 93, 26, 153, 62, 46, 62, 198, 64, 0, 127, 127, 63, 128, 52, 0, 0, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 192, 64, 129, 0, 127, 63, 0, 52, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 192, 64, 141, 0, 11, 63, 0, 52, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 192, 64, 0, 129, 127, 63, 0, 52, 0, 56, 0, 0, 128, 191, 93, 26, 153, 62, 0, 0, 192, 64, 129, 0, 127, 63, 0, 52, 0, 0, 0, 0, 128, 191, 93, 26, 153, 62, 0, 0, 192, 64, 141, 0, 11, 63, 0, 52, 0, 0, 0, 0, 128, 191, 93, 26, 153, 62, 0, 0, 192, 64, 0, 127, 127, 63, 0, 52, 0, 0, 254, 119, 45, 64, 0, 0, 0, 0, 3, 127, 214, 64, 0, 129, 127, 63, 0, 48, 0, 56, 254, 119, 45, 64, 0, 0, 0, 0, 3, 127, 214, 64, 57, 0, 127, 92, 0, 48, 0, 56, 254, 119, 45, 64, 0, 0, 0, 0, 3, 127, 214, 64, 69, 0, 127, 98, 0, 48, 0, 56, 0, 0, 0, 0, 93, 26, 153, 62, 0, 0, 160, 192, 129, 115, 141, 63, 0, 0, 0, 0, 0, 0, 0, 0, 93, 26, 153, 62, 0, 0, 160, 192, 129, 126, 127, 193, 0, 0, 0, 0, 0, 0, 0, 0, 93, 26, 153, 62, 0, 0, 160, 192, 0, 127, 127, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 192, 129, 115, 141, 63, 0, 0, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 192, 129, 126, 127, 193, 0, 0, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 192, 0, 129, 127, 63, 0, 0, 0, 56, 142, 109, 53, 64, 93, 26, 153, 62, 160, 165, 209, 64, 0, 127, 127, 63, 0, 49, 0, 0, 142, 109, 53, 64, 93, 26, 153, 62, 160, 165, 209, 64, 69, 0, 127, 98, 0, 49, 0, 0, 142, 109, 53, 64, 93, 26, 153, 62, 160, 165, 209, 64, 82, 0, 127, 104, 0, 49, 0, 0, 142, 109, 53, 64, 0, 0, 0, 0, 160, 165, 209, 64, 0, 129, 127, 63, 0, 49, 0, 56, 142, 109, 53, 64, 0, 0, 0, 0, 160, 165, 209, 64, 69, 0, 127, 98, 0, 49, 0, 56, 142, 109, 53, 64, 0, 0, 0, 0, 160, 165, 209, 64, 82, 0, 127, 104, 0, 49, 0, 56, 192, 54, 64, 64, 93, 26, 153, 62, 101, 222, 191, 64, 0, 127, 127, 63, 0, 52, 0, 0, 192, 54, 64, 64, 93, 26, 153, 62, 101, 222, 191, 64, 115, 0, 127, 121, 0, 52, 0, 0, 192, 54, 64, 64, 93, 26, 153, 62, 101, 222, 191, 64, 127, 0, 127, 63, 0, 52, 0, 0, 192, 54, 64, 64, 0, 0, 0, 0, 101, 222, 191, 64, 0, 129, 127, 63, 0, 52, 0, 56, 192, 54, 64, 64, 0, 0, 0, 0, 101, 222, 191, 64, 115, 0, 127, 121, 0, 52, 0, 56, 192, 54, 64, 64, 0, 0, 0, 0, 101, 222, 191, 64, 127, 0, 127, 63, 0, 52, 0, 56, 194, 54, 0, 64, 0, 0, 0, 0, 101, 222, 223, 64, 0, 129, 127, 63, 0, 0, 0, 56, 194, 54, 0, 64, 0, 0, 0, 0, 101, 222, 223, 64, 0, 0, 130, 193, 0, 0, 0, 56, 194, 54, 0, 64, 0, 0, 0, 0, 101, 222, 223, 64, 11, 0, 127, 69, 0, 0, 0, 56, 30, 179, 12, 64, 93, 26, 153, 62, 253, 64, 223, 64, 0, 127, 127, 63, 0, 40, 0, 0, 30, 179, 12, 64, 93, 26, 153, 62, 253, 64, 223, 64, 11, 0, 127, 69, 0, 40, 0, 0, 30, 179, 12, 64, 93, 26, 153, 62, 253, 64, 223, 64, 29, 0, 127, 78, 0, 40, 0, 0, 194, 54, 0, 64, 93, 26, 153, 62, 101, 222, 223, 64, 0, 127, 127, 63, 0, 0, 0, 0, 194, 54, 0, 64, 93, 26, 153, 62, 101, 222, 223, 64, 0, 0, 130, 193, 0, 0, 0, 0, 194, 54, 0, 64, 93, 26, 153, 62, 101, 222, 223, 64, 11, 0, 127, 69, 0, 0, 0, 0, 30, 179, 12, 64, 0, 0, 0, 0, 253, 64, 223, 64, 0, 129, 127, 63, 0, 40, 0, 56, 30, 179, 12, 64, 0, 0, 0, 0, 253, 64, 223, 64, 11, 0, 127, 69, 0, 40, 0, 56, 30, 179, 12, 64, 0, 0, 0, 0, 253, 64, 223, 64, 29, 0, 127, 78, 0, 40, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 192, 129, 0, 127, 63, 0, 52, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 192, 129, 11, 245, 63, 0, 52, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 192, 0, 129, 127, 63, 0, 52, 0, 56, 0, 0, 128, 191, 93, 26, 153, 62, 0, 0, 128, 192, 129, 0, 127, 63, 0, 52, 0, 0, 0, 0, 128, 191, 93, 26, 153, 62, 0, 0, 128, 192, 129, 11, 245, 63, 0, 52, 0, 0, 0, 0, 128, 191, 93, 26, 153, 62, 0, 0, 128, 192, 0, 127, 127, 63, 0, 52, 0, 0, 190, 20, 123, 191, 0, 0, 0, 0, 46, 62, 134, 192, 129, 11, 245, 63, 0, 51, 0, 56, 190, 20, 123, 191, 0, 0, 0, 0, 46, 62, 134, 192, 129, 29, 227, 63, 0, 51, 0, 56, 190, 20, 123, 191, 0, 0, 0, 0, 46, 62, 134, 192, 0, 129, 127, 63, 0, 51, 0, 56, 190, 20, 123, 191, 93, 26, 153, 62, 46, 62, 134, 192, 129, 11, 245, 63, 0, 51, 0, 0, 190, 20, 123, 191, 93, 26, 153, 62, 46, 62, 134, 192, 129, 29, 227, 63, 0, 51, 0, 0, 190, 20, 123, 191, 93, 26, 153, 62, 46, 62, 134, 192, 0, 127, 127, 63, 0, 51, 0, 0, 93, 131, 108, 191, 0, 0, 0, 0, 242, 62, 140, 192, 129, 29, 227, 63, 0, 50, 0, 56, 93, 131, 108, 191, 0, 0, 0, 0, 242, 62, 140, 192, 129, 44, 212, 63, 0, 50, 0, 56, 93, 131, 108, 191, 0, 0, 0, 0, 242, 62, 140, 192, 0, 129, 127, 63, 0, 50, 0, 56, 93, 131, 108, 191, 93, 26, 153, 62, 242, 62, 140, 192, 129, 29, 227, 63, 0, 50, 0, 0, 93, 131, 108, 191, 93, 26, 153, 62, 242, 62, 140, 192, 129, 44, 212, 63, 0, 50, 0, 0, 93, 131, 108, 191, 93, 26, 153, 62, 242, 62, 140, 192, 0, 127, 127, 63, 0, 50, 0, 0, 51, 219, 84, 191, 0, 0, 0, 0, 59, 199, 145, 192, 129, 44, 212, 63, 0, 49, 0, 56, 51, 219, 84, 191, 0, 0, 0, 0, 59, 199, 145, 192, 129, 57, 199, 63, 0, 49, 0, 56, 51, 219, 84, 191, 0, 0, 0, 0, 59, 199, 145, 192, 0, 129, 127, 63, 0, 49, 0, 56, 51, 219, 84, 191, 93, 26, 153, 62, 59, 199, 145, 192, 129, 44, 212, 63, 0, 49, 0, 0, 51, 219, 84, 191, 93, 26, 153, 62, 59, 199, 145, 192, 129, 57, 199, 63, 0, 49, 0, 0, 51, 219, 84, 191, 93, 26, 153, 62, 59, 199, 145, 192, 0, 127, 127, 63, 0, 49, 0, 0, 245, 4, 53, 191, 0, 0, 0, 0, 158, 160, 150, 192, 129, 57, 199, 63, 0, 48, 0, 56, 245, 4, 53, 191, 0, 0, 0, 0, 158, 160, 150, 192, 129, 69, 187, 63, 0, 48, 0, 56, 245, 4, 53, 191, 0, 0, 0, 0, 158, 160, 150, 192, 0, 129, 127, 63, 0, 48, 0, 56, 245, 4, 53, 191, 93, 26, 153, 62, 158, 160, 150, 192, 129, 57, 199, 63, 0, 48, 0, 0, 245, 4, 53, 191, 93, 26, 153, 62, 158, 160, 150, 192, 129, 69, 187, 63, 0, 48, 0, 0, 245, 4, 53, 191, 93, 26, 153, 62, 158, 160, 150, 192, 0, 127, 127, 63, 0, 48, 0, 0, 219, 57, 14, 191, 0, 0, 0, 0, 102, 155, 154, 192, 129, 69, 187, 63, 0, 46, 0, 56, 219, 57, 14, 191, 0, 0, 0, 0, 102, 155, 154, 192, 129, 82, 174, 63, 0, 46, 0, 56, 219, 57, 14, 191, 0, 0, 0, 0, 102, 155, 154, 192, 0, 129, 127, 63, 0, 46, 0, 56, 219, 57, 14, 191, 93, 26, 153, 62, 102, 155, 154, 192, 129, 69, 187, 63, 0, 46, 0, 0, 219, 57, 14, 191, 93, 26, 153, 62, 102, 155, 154, 192, 129, 82, 174, 63, 0, 46, 0, 0, 219, 57, 14, 191, 93, 26, 153, 62, 102, 155, 154, 192, 0, 127, 127, 63, 0, 46, 0, 0, 21, 239, 195, 190, 0, 0, 0, 0, 108, 144, 157, 192, 129, 82, 174, 63, 0, 44, 0, 56, 21, 239, 195, 190, 0, 0, 0, 0, 108, 144, 157, 192, 129, 97, 159, 63, 0, 44, 0, 56, 21, 239, 195, 190, 0, 0, 0, 0, 108, 144, 157, 192, 0, 129, 127, 63, 0, 44, 0, 56, 21, 239, 195, 190, 93, 26, 153, 62, 108, 144, 157, 192, 129, 82, 174, 63, 0, 44, 0, 0, 21, 239, 195, 190, 93, 26, 153, 62, 108, 144, 157, 192, 129, 97, 159, 63, 0, 44, 0, 0, 21, 239, 195, 190, 93, 26, 153, 62, 108, 144, 157, 192, 0, 127, 127, 63, 0, 44, 0, 0, 188, 197, 71, 190, 0, 0, 0, 0, 152, 98, 159, 192, 129, 97, 159, 63, 0, 40, 0, 56, 188, 197, 71, 190, 0, 0, 0, 0, 152, 98, 159, 192, 129, 115, 141, 63, 0, 40, 0, 56, 188, 197, 71, 190, 0, 0, 0, 0, 152, 98, 159, 192, 0, 129, 127, 63, 0, 40, 0, 56, 188, 197, 71, 190, 93, 26, 153, 62, 152, 98, 159, 192, 129, 97, 159, 63, 0, 40, 0, 0, 188, 197, 71, 190, 93, 26, 153, 62, 152, 98, 159, 192, 129, 115, 141, 63, 0, 40, 0, 0, 188, 197, 71, 190, 93, 26, 153, 62, 152, 98, 159, 192, 0, 127, 127, 63, 0, 40, 0, 0, 190, 54, 64, 64, 93, 26, 153, 62, 155, 33, 128, 192, 0, 127, 127, 63, 0, 52, 0, 0, 190, 54, 64, 64, 93, 26, 153, 62, 155, 33, 128, 192, 127, 11, 129, 121, 0, 52, 0, 0, 190, 54, 64, 64, 93, 26, 153, 62, 155, 33, 128, 192, 127, 0, 127, 63, 0, 52, 0, 0, 190, 54, 64, 64, 0, 0, 0, 0, 155, 33, 128, 192, 0, 129, 127, 63, 0, 52, 0, 56, 190, 54, 64, 64, 0, 0, 0, 0, 155, 33, 128, 192, 127, 11, 129, 121, 0, 52, 0, 56, 190, 54, 64, 64, 0, 0, 0, 0, 155, 33, 128, 192, 127, 0, 127, 63, 0, 52, 0, 56, 238, 251, 62, 64, 93, 26, 153, 62, 201, 95, 134, 192, 0, 127, 127, 63, 128, 52, 0, 0, 238, 251, 62, 64, 93, 26, 153, 62, 201, 95, 134, 192, 127, 29, 129, 112, 128, 52, 0, 0, 238, 251, 62, 64, 93, 26, 153, 62, 201, 95, 134, 192, 127, 11, 129, 121, 128, 52, 0, 0, 238, 251, 62, 64, 0, 0, 0, 0, 201, 95, 134, 192, 0, 129, 127, 63, 128, 52, 0, 56, 238, 251, 62, 64, 0, 0, 0, 0, 201, 95, 134, 192, 127, 29, 129, 112, 128, 52, 0, 56, 238, 251, 62, 64, 0, 0, 0, 0, 201, 95, 134, 192, 127, 11, 129, 121, 128, 52, 0, 56, 150, 87, 59, 64, 93, 26, 153, 62, 141, 96, 140, 192, 0, 127, 127, 63, 0, 53, 0, 0, 150, 87, 59, 64, 93, 26, 153, 62, 141, 96, 140, 192, 127, 44, 129, 104, 0, 53, 0, 0, 150, 87, 59, 64, 93, 26, 153, 62, 141, 96, 140, 192, 127, 29, 129, 112, 0, 53, 0, 0, 150, 87, 59, 64, 0, 0, 0, 0, 141, 96, 140, 192, 0, 129, 127, 63, 0, 53, 0, 56, 150, 87, 59, 64, 0, 0, 0, 0, 141, 96, 140, 192, 127, 44, 129, 104, 0, 53, 0, 56, 150, 87, 59, 64, 0, 0, 0, 0, 141, 96, 140, 192, 127, 29, 129, 112, 0, 53, 0, 56, 138, 109, 53, 64, 93, 26, 153, 62, 215, 232, 145, 192, 0, 127, 127, 63, 128, 53, 0, 0, 138, 109, 53, 64, 93, 26, 153, 62, 215, 232, 145, 192, 127, 57, 129, 98, 128, 53, 0, 0, 138, 109, 53, 64, 93, 26, 153, 62, 215, 232, 145, 192, 127, 44, 129, 104, 128, 53, 0, 0, 138, 109, 53, 64, 0, 0, 0, 0, 215, 232, 145, 192, 0, 129, 127, 63, 128, 53, 0, 56, 138, 109, 53, 64, 0, 0, 0, 0, 215, 232, 145, 192, 127, 57, 129, 98, 128, 53, 0, 56, 138, 109, 53, 64, 0, 0, 0, 0, 215, 232, 145, 192, 127, 44, 129, 104, 128, 53, 0, 56, 190, 54, 0, 64, 0, 0, 0, 0, 155, 33, 160, 192, 129, 126, 127, 193, 0, 56, 0, 56, 190, 54, 0, 64, 0, 0, 0, 0, 155, 33, 160, 192, 0, 129, 127, 63, 0, 56, 0, 56, 190, 54, 0, 64, 0, 0, 0, 0, 155, 33, 160, 192, 127, 115, 129, 69, 0, 56, 0, 56, 190, 54, 0, 64, 93, 26, 153, 62, 155, 33, 160, 192, 129, 126, 127, 193, 0, 56, 0, 0, 190, 54, 0, 64, 93, 26, 153, 62, 155, 33, 160, 192, 0, 127, 127, 63, 0, 56, 0, 0, 190, 54, 0, 64, 93, 26, 153, 62, 155, 33, 160, 192, 127, 115, 129, 69, 0, 56, 0, 0, 250, 119, 45, 64, 93, 26, 153, 62, 57, 194, 150, 192, 0, 127, 127, 63, 0, 54, 0, 0, 250, 119, 45, 64, 93, 26, 153, 62, 57, 194, 150, 192, 127, 69, 129, 92, 0, 54, 0, 0, 250, 119, 45, 64, 93, 26, 153, 62, 57, 194, 150, 192, 127, 57, 129, 98, 0, 54, 0, 0, 250, 119, 45, 64, 0, 0, 0, 0, 57, 194, 150, 192, 0, 129, 127, 63, 0, 54, 0, 56, 250, 119, 45, 64, 0, 0, 0, 0, 57, 194, 150, 192, 127, 69, 129, 92, 0, 54, 0, 56, 250, 119, 45, 64, 0, 0, 0, 0, 57, 194, 150, 192, 127, 57, 129, 98, 0, 54, 0, 56, 52, 197, 35, 64, 93, 26, 153, 62, 1, 189, 154, 192, 0, 127, 127, 63, 128, 54, 0, 0, 52, 197, 35, 64, 93, 26, 153, 62, 1, 189, 154, 192, 127, 82, 129, 85, 128, 54, 0, 0, 52, 197, 35, 64, 93, 26, 153, 62, 1, 189, 154, 192, 127, 69, 129, 92, 128, 54, 0, 0, 52, 197, 35, 64, 0, 0, 0, 0, 1, 189, 154, 192, 0, 129, 127, 63, 128, 54, 0, 56, 52, 197, 35, 64, 0, 0, 0, 0, 1, 189, 154, 192, 127, 82, 129, 85, 128, 54, 0, 56, 52, 197, 35, 64, 0, 0, 0, 0, 1, 189, 154, 192, 127, 69, 129, 92, 128, 54, 0, 56, 160, 180, 24, 64, 93, 26, 153, 62, 7, 178, 157, 192, 0, 127, 127, 63, 0, 55, 0, 0, 160, 180, 24, 64, 93, 26, 153, 62, 7, 178, 157, 192, 127, 97, 129, 78, 0, 55, 0, 0, 160, 180, 24, 64, 93, 26, 153, 62, 7, 178, 157, 192, 127, 82, 129, 85, 0, 55, 0, 0, 160, 180, 24, 64, 0, 0, 0, 0, 7, 178, 157, 192, 0, 129, 127, 63, 0, 55, 0, 56, 160, 180, 24, 64, 0, 0, 0, 0, 7, 178, 157, 192, 127, 97, 129, 78, 0, 55, 0, 56, 160, 180, 24, 64, 0, 0, 0, 0, 7, 178, 157, 192, 127, 82, 129, 85, 0, 55, 0, 56, 26, 179, 12, 64, 93, 26, 153, 62, 51, 132, 159, 192, 0, 127, 127, 63, 128, 55, 0, 0, 26, 179, 12, 64, 93, 26, 153, 62, 51, 132, 159, 192, 127, 115, 129, 69, 128, 55, 0, 0, 26, 179, 12, 64, 93, 26, 153, 62, 51, 132, 159, 192, 127, 97, 129, 78, 128, 55, 0, 0, 26, 179, 12, 64, 0, 0, 0, 0, 51, 132, 159, 192, 0, 129, 127, 63, 128, 55, 0, 56, 26, 179, 12, 64, 0, 0, 0, 0, 51, 132, 159, 192, 127, 115, 129, 69, 128, 55, 0, 56, 26, 179, 12, 64, 0, 0, 0, 0, 51, 132, 159, 192, 127, 97, 129, 78, 128, 55, 0, 56 ),
"array_index_data": PoolByteArray( 100, 0, 11, 0, 97, 0, 100, 0, 14, 0, 11, 0, 185, 0, 175, 0, 182, 0, 185, 0, 178, 0, 175, 0, 13, 0, 5, 0, 10, 0, 13, 0, 8, 0, 5, 0, 197, 0, 181, 0, 194, 0, 197, 0, 184, 0, 181, 0, 7, 0, 92, 0, 4, 0, 7, 0, 95, 0, 92, 0, 203, 0, 193, 0, 200, 0, 203, 0, 196, 0, 193, 0, 94, 0, 26, 0, 91, 0, 94, 0, 83, 0, 26, 0, 157, 0, 84, 0, 160, 0, 157, 0, 87, 0, 84, 0, 209, 0, 199, 0, 206, 0, 209, 0, 202, 0, 199, 0, 151, 0, 159, 0, 154, 0, 151, 0, 156, 0, 159, 0, 27, 0, 37, 0, 30, 0, 27, 0, 34, 0, 37, 0, 145, 0, 153, 0, 148, 0, 145, 0, 150, 0, 153, 0, 33, 0, 43, 0, 36, 0, 33, 0, 40, 0, 43, 0, 139, 0, 147, 0, 142, 0, 139, 0, 144, 0, 147, 0, 39, 0, 49, 0, 42, 0, 39, 0, 46, 0, 49, 0, 133, 0, 141, 0, 136, 0, 133, 0, 138, 0, 141, 0, 45, 0, 55, 0, 48, 0, 45, 0, 52, 0, 55, 0, 127, 0, 135, 0, 130, 0, 127, 0, 132, 0, 135, 0, 51, 0, 61, 0, 54, 0, 51, 0, 58, 0, 61, 0, 121, 0, 129, 0, 124, 0, 121, 0, 126, 0, 129, 0, 57, 0, 67, 0, 60, 0, 57, 0, 64, 0, 67, 0, 115, 0, 123, 0, 118, 0, 115, 0, 120, 0, 123, 0, 63, 0, 73, 0, 66, 0, 63, 0, 70, 0, 73, 0, 112, 0, 110, 0, 106, 0, 112, 0, 104, 0, 110, 0, 69, 0, 79, 0, 72, 0, 69, 0, 76, 0, 79, 0, 16, 0, 107, 0, 1, 0, 16, 0, 113, 0, 107, 0, 188, 0, 211, 0, 191, 0, 188, 0, 214, 0, 211, 0, 22, 0, 2, 0, 19, 0, 22, 0, 17, 0, 2, 0, 215, 0, 205, 0, 212, 0, 215, 0, 208, 0, 205, 0, 101, 0, 164, 0, 167, 0, 101, 0, 98, 0, 164, 0, 173, 0, 163, 0, 170, 0, 173, 0, 166, 0, 163, 0, 82, 0, 20, 0, 25, 0, 82, 0, 23, 0, 20, 0, 114, 0, 78, 0, 75, 0, 114, 0, 117, 0, 78, 0, 179, 0, 169, 0, 176, 0, 179, 0, 172, 0, 169, 0, 88, 0, 189, 0, 85, 0, 88, 0, 186, 0, 189, 0, 103, 0, 32, 0, 109, 0, 103, 0, 29, 0, 32, 0, 137, 0, 125, 0, 131, 0, 125, 0, 80, 0, 119, 0, 80, 0, 68, 0, 74, 0, 68, 0, 56, 0, 62, 0, 56, 0, 44, 0, 50, 0, 44, 0, 31, 0, 38, 0, 31, 0, 105, 0, 108, 0, 105, 0, 18, 0, 0, 0, 18, 0, 90, 0, 24, 0, 90, 0, 9, 0, 3, 0, 9, 0, 162, 0, 96, 0, 162, 0, 174, 0, 168, 0, 174, 0, 192, 0, 180, 0, 192, 0, 204, 0, 198, 0, 204, 0, 190, 0, 210, 0, 190, 0, 161, 0, 86, 0, 161, 0, 149, 0, 155, 0, 149, 0, 137, 0, 143, 0, 137, 0, 80, 0, 125, 0, 80, 0, 56, 0, 68, 0, 56, 0, 31, 0, 44, 0, 31, 0, 18, 0, 105, 0, 18, 0, 9, 0, 90, 0, 9, 0, 174, 0, 162, 0, 174, 0, 204, 0, 192, 0, 204, 0, 161, 0, 190, 0, 161, 0, 137, 0, 149, 0, 137, 0, 56, 0, 80, 0, 56, 0, 18, 0, 31, 0, 18, 0, 174, 0, 9, 0, 174, 0, 161, 0, 204, 0, 161, 0, 56, 0, 137, 0, 56, 0, 174, 0, 18, 0, 56, 0, 161, 0, 174, 0, 116, 0, 128, 0, 122, 0, 128, 0, 140, 0, 134, 0, 140, 0, 152, 0, 146, 0, 152, 0, 89, 0, 158, 0, 89, 0, 213, 0, 187, 0, 213, 0, 201, 0, 207, 0, 201, 0, 183, 0, 195, 0, 183, 0, 171, 0, 177, 0, 171, 0, 99, 0, 165, 0, 99, 0, 6, 0, 12, 0, 6, 0, 81, 0, 93, 0, 81, 0, 15, 0, 21, 0, 15, 0, 102, 0, 111, 0, 102, 0, 35, 0, 28, 0, 35, 0, 47, 0, 41, 0, 47, 0, 59, 0, 53, 0, 59, 0, 71, 0, 65, 0, 71, 0, 116, 0, 77, 0, 116, 0, 140, 0, 128, 0, 140, 0, 89, 0, 152, 0, 89, 0, 201, 0, 213, 0, 201, 0, 171, 0, 183, 0, 171, 0, 6, 0, 99, 0, 6, 0, 15, 0, 81, 0, 15, 0, 35, 0, 102, 0, 35, 0, 59, 0, 47, 0, 59, 0, 116, 0, 71, 0, 116, 0, 89, 0, 140, 0, 89, 0, 171, 0, 201, 0, 171, 0, 15, 0, 6, 0, 15, 0, 59, 0, 35, 0, 59, 0, 89, 0, 116, 0, 89, 0, 15, 0, 171, 0, 89, 0, 59, 0, 15, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 420,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 216
}

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.92549, 0.34902, 0.121569, 1 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -1.03298, -0.0329783, -4.24548, 3.05633, 0.362761, 6.17522, 2.99028, 0.362761, 6.43869, 3.05633, -0.0329783, 6.17522, 2.99028, 0.362761, -4.44279, -1.03298, 0.362761, 6.24138, -0.76879, -0.0329783, 6.76833, 3.05633, -0.0329783, -4.17932, -0.76879, 0.362761, -4.77243, 2.26457, -0.0329783, -5.03708, 2.26457, 0.362761, 7.03298, 2.26457, -0.0329783, 7.03298, -1.03298, -0.0329783, 6.24138, -1.03298, 0.362761, -4.24548, -0.241215, 0.362761, 7.03298, 2.26457, 0.362761, -5.03708, -0.241215, -0.0329783, -5.03708, 3.05633, 0.362761, -4.17932, -0.241215, -0.0329783, 7.03298, -0.241215, 0.362761, -5.03708, 2.5944, -0.0329783, 6.89947, 2.5944, -0.0329783, -4.90357, -0.76879, 0.362761, 6.76833, -0.76879, -0.0329783, -4.77243, 2.5944, 0.362761, -4.90357, 2.92424, -0.0329783, -4.57512, 2.5944, 0.362761, 6.89947, 2.92424, -0.0329783, 6.57102, -0.900884, 0.362761, 6.57102, -0.900884, 0.362761, -4.57512, -0.57105, -0.0329783, 6.89947, -0.57105, 0.362761, -4.90357, 2.92424, 0.362761, 6.57102, 2.92424, 0.362761, -4.57512, -0.966931, -0.0329783, 6.43869, -0.966931, -0.0329783, -4.44279, -0.438956, 0.362761, 6.96563, -0.438956, -0.0329783, -4.96973, 2.99028, -0.0329783, 6.43869, 2.99028, -0.0329783, -4.44279, 2.46231, -0.0329783, 6.96563, 2.46231, -0.0329783, -4.96973 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.184038, -0.982441, -0.982441, 0.184038, 0.982441, 0.982441, 0.306731, 0.981785, 0.951032, -0.18408, 0.982434, -0.982434, -0.982432, -0.982623, 0.184098, 0.98243, -0.982666, 0.184106, 0.917016, 0.978348, -0.397238, -0.982432, 0.982623, 0.184098, -0.18408, -0.982434, 0.982434, -0.79176, -0.974761, -0.60913, -0.609138, 0.97476, 0.791754, 0.917016, 0.978348, 0.397238, 0.609111, -0.974785, 0.791775, -0.917023, 0.978309, -0.397223, 0.853885, -0.976024, -0.518202, 0.5183, 0.975911, -0.853827, -0.79176, -0.974761, 0.60913, -0.518332, -0.975889, -0.853807, -0.609138, 0.97476, -0.791754, -0.982432, -0.982623, -0.184098, 0.184038, -0.982441, 0.982441, 0.98243, 0.982666, -0.184106, 0.642894, 0.979738, 0.765301, -0.18408, 0.982434, 0.982434, 0.642894, -0.979738, -0.765301, 0.853885, -0.976024, 0.518202, -0.518332, -0.975889, 0.853807, -0.853813, 0.975892, 0.518323, 0.98243, -0.982666, -0.184106, 0.184038, 0.982441, -0.982441, -0.18408, -0.982434, -0.982434, 0.791813, 0.974646, -0.609058, 0.98243, 0.982666, 0.184106, -0.982432, 0.982623, -0.184098, 0.397198, -0.978324, -0.917035, -0.397393, 0.978225, 0.916943, -0.917023, -0.978309, 0.397223, -0.397393, 0.978225, -0.916943, -0.707103, 0.983887, -0.707097, 0.459081, -0.979594, 0.887733, 0.791813, 0.974646, 0.609058, -0.917023, -0.978309, -0.397223, -0.707103, -0.983887, -0.707097, -0.707103, -0.983887, 0.707097, -0.707103, 0.983887, 0.707097, 0.5183, 0.975911, 0.853827, -0.853813, 0.975892, -0.518323, 0.642894, 0.979738, -0.765301, 0.95108, -0.981878, 0.306596, 0.95108, -0.981878, -0.306596, 0.306731, 0.981785, -0.951032, -0.306598, -0.981834, 0.951079, -0.306598, -0.981834, -0.951079, -0.951084, 0.981837, 0.306584, 0.791813, -0.974646, 0.609058, 0.791813, -0.974646, -0.609058, 0.306731, -0.981785, 0.951032, 0.5183, -0.975911, -0.853827, -0.951084, -0.981837, -0.306584, 0.397198, 0.978324, 0.917035, 0.459081, 0.979594, -0.887733, -0.853813, -0.975892, -0.518323, -0.853813, -0.975892, 0.518323, -0.518332, 0.975889, -0.853807 )

[sub_resource type="CylinderMesh" id=2]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.670588, 0.384314, 0.0509804, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.670588, 0.541176, 0.0901961, 1 )
emission_enabled = true
emission = Color( 0.384314, 0.243137, 0.129412, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="Elevator" type="Spatial"]
transform = Transform( 0.216, 0, 0, 0, 0.216, 0, 0, 0, 0.216, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Platform" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -6, 0, 2 )
generate_lightmap = false
mesh = SubResource( 1 )
skeleton = NodePath("")
material/0 = SubResource( 3 )

[node name="KinematicBody" type="KinematicBody" parent="Platform"]

[node name="CollisionShape" type="CollisionShape" parent="Platform/KinematicBody"]
shape = SubResource( 5 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.75947e-07, 4.82908e-07, 2.75947e-07 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 2.5272, 0, 0, 0, 0.951999, 0, 0, 0, 9.01379, -4, 1.62593, 3.5 )
shape = SubResource( 6 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 3, -4, 0.6, 3.5 )

[node name="Button_pressed" type="MeshInstance" parent="Spatial"]
transform = Transform( 0.756, 0, 0, 0, 0.3024, 0, 0, 0, 0.756, 0, -0.123777, 0 )
generate_lightmap = false
mesh = SubResource( 2 )
material/0 = SubResource( 7 )

[node name="Button_unpressed" type="MeshInstance" parent="Spatial"]
transform = Transform( 0.8316, 0, 0, 0, 0.504, 0, 0, 0, 0.8316, 0, 0.1, 0 )
generate_lightmap = false
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="Button_down" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 4.62963, 0, 0, 0, 4.62963, 0, 0, 0, 4.62963, 0, 0, 0 )
stream = ExtResource( 3 )

[node name="Button_up" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 4.62963, 0, 0, 0, 4.62963, 0, 0, 0, 4.62963, 0, 0, 0 )
stream = ExtResource( 4 )

[node name="Whirr_down" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 4.62963, 0, 0, 0, 4.62963, 0, 0, 0, 4.62963, 0, 0, 0 )
stream = ExtResource( 5 )

[node name="Whirr_up" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
